Restart button - Adição da funcionalidade de reiniciar o jogo; - Correção de bug que não exibia o alert de vitória; - Adição de animações.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <div class="item"></div>
       <div class="item"></div>
     </div>
+    <button id="restart">Restart</button>
   </div>
+  <script src="js/helpers.js"></script>
   <script src="js/TicTacToe.js"></script>
   <script>
     const ticTacToe = new TicTacToe();
